css/styles.css
/* ... */
/*------------------------------------*\
  DESKTOP
\*------------------------------------*/




@media (min-width: 1025px) {
    
	/*!HEADER*/

	/*adjust grid sizing*/
	header {
		grid-template-columns: 200px 1fr;
	}

	.header-cover {
		background-color: transparent;
		pointer-events: none;
	}

	/*resize logo*/
	.logo {
		box-sizing: content-box;
		width: 200px;
	}

	/*remove hamburger icon*/
	#hamburger {
		display: none;
	}

	/*reposition container*/
	#nav-container {
		display: grid;
		grid-column: 2;
		grid-row: 1;
		height: 100%;
		margin-top: 0;
		max-height: fit-content;
	}

	/*display line between top and main nav*/
	#header-line {
		align-self: start;
		display: block;
		grid-row: 2;
		margin-left: 15%;
		margin-top: 10px;
		opacity: 1;
	}


	/*!top nav*/

	/*change positioning*/
	#top-nav {
		padding: 10px 15px 0 0;
		text-align: right;
	}

	#top-nav ul {
		font-size: 0; /*removes whitespace around list items*/
	}

	/*add vertical lines between nav items*/
	#top-nav li.top-level:not(:last-child):after {
		color: white;
		content: "|";
		padding-left: 8px;
		padding-right: 8px;
	}

	#top-nav a,
	#top-nav li {
		color: white;
		cursor: pointer;
		font-size: 1.2vw;
		text-decoration: none;
		transition: .2s;
	}

	#top-nav a:hover,
	#top-nav li:hover {
		color: #ffffffc1;
	}

	/*remove 'search' next to search icon*/
	#top-nav .search::before {
		content: '';
	}

	#top-nav .top-level {
		display: inline-block;
		padding: 0 0 5px 0;
	}

	#top-nav .dropdown {
		background-color: white;
		display: none;
        margin-left: -5px;
		max-height: fit-content;
        padding: 5px 20px 5px 10px;
		position: absolute;
		text-align: left;
        margin-top: 5px;
	}

	#top-nav .dropdown a,
	#top-nav .dropdown li {
		color: black;
        font-size: 14px;
        padding: 5px;
	}

	#top-nav .dropdown a:hover {
        color: var(--reynoldsred);
        transition: .2s;
    }
	
	/*display dropdown on hover*/
	#top-nav .top-level:hover .dropdown {
		display: block;
	}

	/*remove '+' next to items with dropdowns*/
	#top-nav li.top-level span::after {
		content: "";
		margin-left: -3px;
	}

	#top-nav .top-level.nav-toggle span::after {
		content: '';
	}

	#top-nav .nav-toggle .dropdown {
		padding-top: 5px;
	}


	/*!main nav*/

	#main-nav {
		background-color: #ffffff00;
		padding: 0px;
		text-align: right;
		margin-right: 10px;
	}

    #main-nav ul {
		display: inline;
	}

	#main-nav li {
		color: white;
		display: inline;
		font-size: 1.4vw;
		padding: 5px 0 15px 4px;
	}

	/*add white space on last list item (other list items have default white space)*/
	#main-nav li:last-of-type {
		padding-right: 4px;
	}

	#main-nav a {
		color: white;
		padding: 0 5px;
	}

	#main-nav a:active {
		pointer-events: none; /*prevent snapping to top if main link is clicked on desktop*/
	}

	#main-nav li:hover {
		background-color: white;
		border: 0;
		border-radius: 10px 10px 0 0;
	}

	#main-nav li:hover span a {
		color: black;
	}

	#main-nav .dropdown a {
		pointer-events: auto; /*allow links to work within dropdowns*/
	}

	/*remove '+' symbol after menu items*/
	#main-nav .top-level span::after {
		content: '';
		margin-left: 0px;
	}
	
	#main-nav .top-level.nav-toggle span::after {
		content: '';
	}
	
	/*change dropdown to display in columns (mega menu) and hide until hovered*/
	#main-nav .dropdown {
        background-color: white;
        box-shadow: 0px 3000px 0px 3000px #0000005b;
        column-count: 3;
		column-width: 240px;
		display: none;
        left: 0;
		max-height: fit-content;
        margin-top: 7px;
        padding: 15px 0px 15px 250px;
		position: absolute;
		text-align: left;
        width: 100%;
	}

	/*position dropdown items as lists within columns*/
    #main-nav .dropdown li {
        display: list-item;
		font-size: 16pt;
        padding: 0px;
		margin: 0px;
	}

    #main-nav .dropdown a:hover {
        color: var(--reynoldsred);
        transition: .2s;
    }

	/*display dropdown on hover*/
    #main-nav .top-level:hover .dropdown {
		display: block;
	}


    /*!SBIT-GENERAL*/

	/*!carousel*/

	/*increase carousel size*/
	#sbit-carousel .slide {
		height: 320px;
	}
	
	
	/*!main image*/

	/*increase main image size*/
	#sbit-main-image img {
		height: 320px;
	}



	/*!SBIT-HOMEPAGE*/


	/*!programs*/

	/*increase button size*/
	#programs button {
		height: 170px;
		width: 170px;
	}

	/*!FOOTER*/

	footer {
		display: inline-block;
		width: 100%;
	}	

	.footer-locations {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		/* gap: 25px; */
		/* grid-template-columns: repeat(4, 1fr); */
		/* grid-template-columns: minmax(0, 200px) minmax(0, 200px) minmax(0, 200px) minmax(0, 225px); */
		left: 0%;
		max-width: 1200px;
		margin: 0px auto 0px auto;
	}

	#footer-address-bar {
		height: 360px;
	}

	#footer-copyright-01 {
		line-height: 40px;
	}

	#footer-copyright-02 {
		font-size: 16px;
	}
}



/*------------------------------------*\
  DESKTOP - LARGE
\*------------------------------------*/



@media (min-width: 1400px) {

	/*+HEADER*/

	/*+top nav*/

	/*max font size*/
	#top-nav a,
	#top-nav li {
		font-size: 12pt;
	}


	/*+main nav*/

	/*max font size*/
	#main-nav li {
		font-size: 15.5pt;
	}
}

